// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render active 1`] = `
<div
  class="wp-components-elevation css-w8xayk"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-elevation css-1idto82"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render hover 1`] = `
<div
  class="wp-components-elevation css-1am7pv8"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render isInteractive 1`] = `
<div
  class="wp-components-elevation css-9rah3r"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render offset 1`] = `
<div
  class="wp-components-elevation css-e3sw9l"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render value 1`] = `
<div
  class="wp-components-elevation css-1xohjxi"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;
